--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta.15", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["unstable"] }
-tauri-plugin-shell = "2.0.0-beta"
+tauri = { version = "2.0.0-beta.19", features = ["unstable"] }
+tauri-plugin-shell = "2.0.0-beta.5"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-anyhow = "1.0.81"
+serde_json = "1.0.117"
+anyhow = "1.0.83"
 
