--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
-    "element-plus": "^2.6.3",
-    "vue": "^3.3.4",
-    "vue-router": "^4.3.0"
+    "@tauri-apps/api": ">=2.0.0-beta.14",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.7",
+    "axios": "^1.7.2",
+    "element-plus": "^2.7.7",
+    "vue": "^3.4.31",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-beta.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "sass": "^1.75.0",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vue-tsc": "^2.0.26"
   }
 }
