--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tauri-apps/api": "2.0.0-beta.15",
     "@tauri-apps/plugin-shell": "2.0.0-beta.8",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.7.7",
     "vue": "^3.4.34",
     "vue-router": "^4.4.0"
